feat: adding proto update for enum string values
