# libs/backend/proto-gen/go/webhooks/inboundwebhooksapi/v1/api.pb.go
@@ -31,7 +31,7 @@ type ClerkUserAuthEventRequest struct {
 	state         protoimpl.MessageState `protogen:"open.v1"`
 	Type          ClerkUserEventType     `protobuf:"varint,1,opt,name=type,proto3,enum=webhooks.inboundwebhooksapi.v1.ClerkUserEventType" json:"type,omitempty"`
 	Object        string                 `protobuf:"bytes,2,opt,name=object,proto3" json:"object,omitempty"`
-	User          *ClerkUser             `protobuf:"bytes,3,opt,name=user,proto3" json:"user,omitempty"`
+	Data          *ClerkUser             `protobuf:"bytes,3,opt,name=data,proto3" json:"data,omitempty"`
 	unknownFields protoimpl.UnknownFields
 	sizeCache     protoimpl.SizeCache
 }
@@ -70,7 +70,7 @@ func (x *ClerkUserAuthEventRequest) GetType() ClerkUserEventType {
 	if x != nil {
 		return x.Type
 	}
-	return ClerkUserEventType_UNKNOWN
+	return ClerkUserEventType_CLERK_USER_EVENT_TYPE_UNKNOWN
 }
 
 func (x *ClerkUserAuthEventRequest) GetObject() string {
@@ -80,9 +80,9 @@ func (x *ClerkUserAuthEventRequest) GetObject() string {
 	return ""
 }
 
-func (x *ClerkUserAuthEventRequest) GetUser() *ClerkUser {
+func (x *ClerkUserAuthEventRequest) GetData() *ClerkUser {
 	if x != nil {
-		return x.User
+		return x.Data
 	}
 	return nil
 }
@@ -112,11 +112,11 @@ var file_webhooks_inboundwebhooksapi_v1_api_proto_rawDesc = string([]byte{
 	0x70, 0x69, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x6c, 0x65, 0x72, 0x6b, 0x55, 0x73, 0x65, 0x72, 0x45,
 	0x76, 0x65, 0x6e, 0x74, 0x54, 0x79, 0x70, 0x65, 0x52, 0x04, 0x74, 0x79, 0x70, 0x65, 0x12, 0x16,
 	0x0a, 0x06, 0x6f, 0x62, 0x6a, 0x65, 0x63, 0x74, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x06,
-	0x6f, 0x62, 0x6a, 0x65, 0x63, 0x74, 0x12, 0x3d, 0x0a, 0x04, 0x75, 0x73, 0x65, 0x72, 0x18, 0x03,
+	0x6f, 0x62, 0x6a, 0x65, 0x63, 0x74, 0x12, 0x3d, 0x0a, 0x04, 0x64, 0x61, 0x74, 0x61, 0x18, 0x03,
 	0x20, 0x01, 0x28, 0x0b, 0x32, 0x29, 0x2e, 0x77, 0x65, 0x62, 0x68, 0x6f, 0x6f, 0x6b, 0x73, 0x2e,
 	0x69, 0x6e, 0x62, 0x6f, 0x75, 0x6e, 0x64, 0x77, 0x65, 0x62, 0x68, 0x6f, 0x6f, 0x6b, 0x73, 0x61,
 	0x70, 0x69, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x6c, 0x65, 0x72, 0x6b, 0x55, 0x73, 0x65, 0x72, 0x52,
-	0x04, 0x75, 0x73, 0x65, 0x72, 0x32, 0xab, 0x01, 0x0a, 0x1a, 0x49, 0x6e, 0x62, 0x6f, 0x75, 0x6e,
+	0x04, 0x64, 0x61, 0x74, 0x61, 0x32, 0xab, 0x01, 0x0a, 0x1a, 0x49, 0x6e, 0x62, 0x6f, 0x75, 0x6e,
 	0x64, 0x57, 0x65, 0x62, 0x68, 0x6f, 0x6f, 0x6b, 0x73, 0x41, 0x75, 0x74, 0x68, 0x53, 0x65, 0x72,
 	0x76, 0x69, 0x63, 0x65, 0x12, 0x8c, 0x01, 0x0a, 0x12, 0x43, 0x6c, 0x65, 0x72, 0x6b, 0x41, 0x75,
 	0x74, 0x68, 0x55, 0x73, 0x65, 0x72, 0x45, 0x76, 0x65, 0x6e, 0x74, 0x12, 0x39, 0x2e, 0x77, 0x65,
@@ -169,7 +169,7 @@ var file_webhooks_inboundwebhooksapi_v1_api_proto_goTypes = []any{
 }
 var file_webhooks_inboundwebhooksapi_v1_api_proto_depIdxs = []int32{
 	1, // 0: webhooks.inboundwebhooksapi.v1.ClerkUserAuthEventRequest.type:type_name -> webhooks.inboundwebhooksapi.v1.ClerkUserEventType
-	2, // 1: webhooks.inboundwebhooksapi.v1.ClerkUserAuthEventRequest.user:type_name -> webhooks.inboundwebhooksapi.v1.ClerkUser
+	2, // 1: webhooks.inboundwebhooksapi.v1.ClerkUserAuthEventRequest.data:type_name -> webhooks.inboundwebhooksapi.v1.ClerkUser
 	0, // 2: webhooks.inboundwebhooksapi.v1.InboundWebhooksAuthService.ClerkAuthUserEvent:input_type -> webhooks.inboundwebhooksapi.v1.ClerkUserAuthEventRequest
 	3, // 3: webhooks.inboundwebhooksapi.v1.InboundWebhooksAuthService.ClerkAuthUserEvent:output_type -> common.v1.Empty
 	3, // [3:4] is the sub-list for method output_type
